Fix text overflow on mobile - wrap pre tags and clip frame

--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,7 @@ h4 {
 
 .resume-frame {
   background: #eae4f5;
+  overflow: hidden;
 }
 
 p {
@@ -272,6 +273,11 @@ p a:visited {
   .resume-frame {
     width: 100%;
     margin: 0px;
+  }
+
+  pre {
+    white-space: pre-wrap;
+    word-wrap: break-word;
   }
 
   .indent {
